--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+    <h1>Andrew</h1>
     <div id="root"></div>
     <!-- <script src="bundle.js"></script> -->
     <!--
